expected/main/mil/bad-check-body-calls.err
ERROR: "actual/main/mil/bad-check-body-calls.mil", line 5
c[x] = u <- add((x,x)); bnot((x))
^
Type mismatch: cannot unify "Bit 1" with "Word"

ERROR: "actual/main/mil/bad-check-body-calls.mil", line 4
b[x] = u <- add((x,x)); bnot((x))
^
Type mismatch: cannot unify "Bit 1" with "Word"

ERROR: Aborting after 2 previously reported errors

